--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>JM-Repo</title>
 </head>
 <body>
-    
+    <section class="header">
+        <nav>
+            <h2>Nurul</h2>
+            <div class="menu">
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Contacts</li>
+                </ul>
+            </div>
+        </nav>
+    </section>
 </body>
 </html>
