--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <title>JM-Repo</title>
 </head>
 <body>
-    <section class="header">
+    <section class="header container">
         <nav>
-            <h2>Nurul</h2>
+            <h2 class="logo">Nurul</h2>
             <div class="menu">
                 <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Contacts</li>
+                    <a href=""><li>Home</li></a>
+                    <a href=""><li>About</li></a>
+                    <a href=""><li>Contacts</li></a>
                 </ul>
             </div>
         </nav>
