--- a/index.html
+++ b/index.html
@@ -20,5 +20,15 @@
             </div>
         </nav>
     </section>
+
+    <section class="about container">
+        <div class="about-text">
+            <h1>Hello there,</h1>
+            <h2>It's <span>Nurul Hudda</span></h2>
+            <p>I am a web developer at beginner level. I am trying to make a portfolio for me and its just a trial.</p>
+        </div>
+
+        <img src="./img/about.png" alt="">
+    </section>
 </body>
 </html>
