--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,30 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>JM-Repo</title>
+    <title>Portfolio</title>
 </head>
 <body>
-    <section class="header container">
-        <nav>
-            <h2 class="logo">Nurul</h2>
-            <div class="menu">
+    <section class="header">
+        <div class="navbar container">
+            <div class="logo">
+                <h2>Nurul</h2>
+            </div>
+            <div class="nav-items">
                 <ul>
                     <a href=""><li>Home</li></a>
                     <a href=""><li>About</li></a>
                     <a href=""><li>Contacts</li></a>
                 </ul>
             </div>
-        </nav>
-    </section>
-
-    <section class="about container">
-        <div class="about-text">
-            <h1>Hello there,</h1>
-            <h2>It's <span>Nurul Hudda</span></h2>
-            <p>I am a web developer at beginner level. I am trying to make a portfolio for me and its just a trial.</p>
         </div>
 
-        <img src="./img/about.png" alt="">
+        
     </section>
 </body>
 </html>
