--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="header">
         <div class="navbar container">
             <div class="logo">
-                <h2>Nurul</h2>
+                <h2>Logo</h2>
             </div>
             <div class="nav-items">
                 <ul>
@@ -23,7 +23,29 @@
             </div>
         </div>
 
-        
+        <div class="home container">
+            <div class="intro-txt">
+                <h1>Hello There,</h1>
+                <h1>It's <span>Nurul Hudda </span>Here</h1>
+                <p>I am a web developer at beginner level. I am trying to make a portfolio for me and its just a trial.</p>
+            </div>
+            <div class="intro-img">
+                <img src="./img/home-01.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section class="about-section">
+        <div class="about container">
+            <div class="about-img">
+                <img src="./img/about.png" alt="">
+            </div>
+            <div class="about-txt">
+                <h1>Something about me?</h1>
+                <p>I am a <span>NOOB</span> at web development but i want to learn it. I think this its my passion that i will be a web developer.</p> 
+                <a class="resume-btn" href="#">My Resume</a>
+            </div>
+        </div>
     </section>
 </body>
 </html>
