--- a/index.html
+++ b/index.html
@@ -47,5 +47,18 @@
             </div>
         </div>
     </section>
+
+    <section class="contacts-section">
+        <div class="contacts container">
+            <div class="contacts-info">
+                <h4>Cell: <span>+880 1755 456 278</span></h4>
+                <h4>Email: <span>hello@nurulhudda.me</span></h4>
+                <h4>Address: <span>84, Indiara Road, Khamarbari, Dhaka</span></h4>
+            </div>
+            <div class="contacts-img">
+                <img src="./img/49128.png" alt="">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
