--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
                 <img src="./img/49128.png" alt="">
             </div>
         </div>
+        <div class="footer">
+            <p>ⓒNurul Hudda | 2022</p>
+        </div>
     </section>
+
+    
 </body>
 </html>
